--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>spring-core</artifactId>
             <version>${spring-version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.0-jre</version>
+        </dependency>
     </dependencies>
 
     <build>
